--- a/Programmania/wwwroot/css/HamburgerMenu.css
+++ b/Programmania/wwwroot/css/HamburgerMenu.css
@@ -1,7 +1,9 @@
-/*@font-face {
-    font-family: 'mainFont';
-    src: url("../Fonts/Font2.ttf");
-}*/
+.header_main{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
 
 .header-container {
     width: 100%;
@@ -29,6 +31,7 @@
     display: flex;
     list-style: none;
     justify-content: space-between;
+    align-items: center;
 }
 
     .header__list li {
@@ -122,7 +125,7 @@
         width: 100%;
         height: 100%;
         overflow: auto;
-        background-color: #f5f9ff;
+        background-color: rgba(255,255,255, .2);
         padding: 70px 10px 20px 10px;
         z-index: 3;
         transition: all 0.3s ease 0s;
