--- a/Programmania/wwwroot/css/Main.css
+++ b/Programmania/wwwroot/css/Main.css
@@ -1,3 +1,5 @@
+
+
 html, body {
     height: 100%;
     scroll-behavior: smooth;
@@ -106,6 +108,7 @@ html, body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    transform: none !important;
 }
 
 .left-menu__button {
@@ -123,6 +126,7 @@ html, body {
 
     .left-menu__button:hover {
         background-color: #b488fc;
+        cursor: pointer;
     }
 
 .left-menu-content {
@@ -409,10 +413,12 @@ body {
 }
 
 .course__image {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
     box-shadow: 8px 8px 40px 10px #999;
+    width: 100%;
+    max-height: 400px;
+}
+
+.course__image img{
     width: 100%;
     height: 100%;
 }
@@ -936,12 +942,11 @@ body {
 }
 
 .btn_logout{
-    position: absolute;
-    top: 0;
-    right: 20px;
+    margin-top: 0;
+    min-height: 30px;
     background-color: #ff4f4f;
     color: #fff;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 
@@ -1029,6 +1034,10 @@ body {
 .flip__front{
     width: 100%;
     height: 100%;
+}
+
+#expiriance{
+    margin-left: 30px;
 }
 
 @media (max-width: 1362px) {
