--- a/Programmania/wwwroot/css/components/modal.css
+++ b/Programmania/wwwroot/css/components/modal.css
@@ -24,7 +24,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     animation-name: animatetop;
     animation-duration: 0.4s;
-    height: 100%;
+    height: auto;
 }
 
 .modal__label {
