--- a/Programmania/Views/Home/Main.cshtml
+++ b/Programmania/Views/Home/Main.cshtml
@@ -22,9 +22,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js"></script>
     <link rel="stylesheet" href="~/css/HamburgerMenu.css" />
 
-@*    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    @*    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>*@
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>*@
 
     <title>Main</title>
 </head>
@@ -32,41 +32,41 @@
 <body>
     <div class="wrapper">
         <header class="header_main">
-        <div class="header-container">
-            <div class="container__text">Programmania</div>
-            <div class="header__burger">
-                <span></span>
+            <div class="header-container">
+                <div class="container__text">Programmania</div>
+                <div class="header__burger">
+                    <span></span>
+                </div>
+                <div class="container-menu">
+                    <nav class="header__menu">
+                        <ul class="header__list">
+                            <li>
+                                <a href="Main" class="header__link">Main</a>
+                            </li>
+
+                            <li>
+                                <a href="Courses" class="header__link">Courses</a>
+                            </li>
+
+                            <li>
+                                <a href="Performance" class="header__link">Performance</a>
+                            </li>
+
+                            <li>
+                                <a href="Challenges" class="header__link">Challenges</a>
+                            </li>
+
+                            <li>
+                                <a href="Profile" class="header__link">Profile</a>
+                            </li>
+                            <li>
+                                <div class="btn btn_logout">Log out</div>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
-            <div class="container-menu">
-                <nav class="header__menu">
-                    <ul class="header__list">
-                        <li>
-                            <a href="Main" class="header__link">Main</a>
-                        </li>
-
-                        <li>
-                            <a href="Courses" class="header__link">Courses</a>
-                        </li>
-
-                        <li>
-                            <a href="Performance" class="header__link">Performance</a>
-                        </li>
-
-                        <li>
-                            <a href="Challenges" class="header__link">Challenges</a>
-                        </li>
-
-                        <li>
-                            <a href="Profile" class="header__link">Profile</a>
-                        </li>
-                        <li>
-                            <div class="btn btn_logout">Log out</div>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
+        </header>
         <main class="main">
             <header class="header" style="background-image: url('images/mainHeader.jpg');">
                 <div id="nickname" class="header__title">
@@ -117,7 +117,7 @@
 
                     <div class="flip flip_right">
                         <div class="flip__front">
-                            <img id="courseImage" class="flip__front course__image"/>
+                            <img id="courseImage" class="flip__front course__image" />
                         </div>
 
                         <div class="flip__back">
@@ -158,7 +158,7 @@
 
 
 
-            <div class="courses-container" id="courses">
+            <div class="courses-container">
                 <h3 class="container__title">All Courses</h3>
 
 
@@ -167,96 +167,96 @@
                         <div id="courses" class="swiper-wrapper">
                             @*<div class="swiper-slide">
                                 <div class="course" style="background-color: #fcc9c0;">
-                                    <div class="course__content">
-                                        <div class="course__info">
-                                            <h2 class="course__title title_ruby">Ruby</h2>
-                                            <div class="course__percent percent_ruby">
-                                                <div class="ldBar label-center" data-preset="circle" data-value="77"
-                                                     data-transition-in="1000" style="width: 100%; height: 100%">
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="course__button button_ruby">
-                                            <a href="Courses">
-                                                Go to course
-                                            </a>
-                                        </div>
-                                    </div>
-
-                                        <div class="flip">
-                                            <div class="course__image flip__front">
-                                                <img src="~/images/rubyCourse.png" />
-                                            </div>
-
-                                        <div class="flip__back">
-                                            <p>Welcome to Ruby Course!</p>
-                                        </div>
-                                    </div>
+                                <div class="course__content">
+                                <div class="course__info">
+                                <h2 class="course__title title_ruby">Ruby</h2>
+                                <div class="course__percent percent_ruby">
+                                <div class="ldBar label-center" data-preset="circle" data-value="77"
+                                data-transition-in="1000" style="width: 100%; height: 100%">
                                 </div>
-                            </div>
+                                </div>
+                                </div>
 
-                            <div class="swiper-slide">
+                                <div class="course__button button_ruby">
+                                <a href="Courses">
+                                Go to course
+                                </a>
+                                </div>
+                                </div>
+
+                                <div class="flip">
+                                <div class="course__image flip__front">
+                                <img src="~/images/rubyCourse.png" />
+                                </div>
+
+                                <div class="flip__back">
+                                <p>Welcome to Ruby Course!</p>
+                                </div>
+                                </div>
+                                </div>
+                                </div>
+
+                                <div class="swiper-slide">
                                 <div class="course" style="background-color: #c0f1fc;">
-                                    <div class="course__content">
-                                        <div class="course__info">
-                                            <h2 class="course__title title_cpp">C++</h2>
-                                            <div class="course__percent percent_cpp">
-                                                <div class="ldBar label-center" data-preset="circle" data-value="77"
-                                                     data-transition-in="1000" style="width: 100%; height: 100%">
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="course__button button_cpp">
-                                            <a href="Courses">
-                                                Go to course
-                                            </a>
-                                        </div>
-                                    </div>
-
-                                        <div class="flip">
-                                            <div class="course__image flip__front">
-                                                <img src="~/images/cppCourse.png"/>
-                                            </div>
-
-                                        <div class="flip__back">
-                                            <p>Welcome to C++ Course</p>
-                                        </div>
-                                    </div>
+                                <div class="course__content">
+                                <div class="course__info">
+                                <h2 class="course__title title_cpp">C++</h2>
+                                <div class="course__percent percent_cpp">
+                                <div class="ldBar label-center" data-preset="circle" data-value="77"
+                                data-transition-in="1000" style="width: 100%; height: 100%">
                                 </div>
-                            </div>
+                                </div>
+                                </div>
 
-                            <div class="swiper-slide">
+                                <div class="course__button button_cpp">
+                                <a href="Courses">
+                                Go to course
+                                </a>
+                                </div>
+                                </div>
+
+                                <div class="flip">
+                                <div class="course__image flip__front">
+                                <img src="~/images/cppCourse.png"/>
+                                </div>
+
+                                <div class="flip__back">
+                                <p>Welcome to C++ Course</p>
+                                </div>
+                                </div>
+                                </div>
+                                </div>
+
+                                <div class="swiper-slide">
                                 <div class="course" style="background-color: #f5e4ff;">
-                                    <div class="course__content">
-                                        <div class="course__info">
-                                            <h2 class="course__title title_php">PHP</h2>
-                                            <div class="course__percent percent_php">
-                                                <div class="ldBar label-center" data-preset="circle" data-value="77"
-                                                     data-transition-in="1000" style="width: 100%; height: 100%">
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="course__button button_php">
-                                            <a href="Courses">
-                                                Go to course
-                                            </a>
-                                        </div>
-                                    </div>
-
-                                        <div class="flip">
-                                            <div class="flip__front course__image">
-                                                <img src="~/images/phpCourse.jpg" />
-                                            </div>
-
-                                        <div class="flip__back">
-                                            <p>Welcome to PHP Course</p>
-                                        </div>
-                                    </div>
+                                <div class="course__content">
+                                <div class="course__info">
+                                <h2 class="course__title title_php">PHP</h2>
+                                <div class="course__percent percent_php">
+                                <div class="ldBar label-center" data-preset="circle" data-value="77"
+                                data-transition-in="1000" style="width: 100%; height: 100%">
                                 </div>
-                            </div>*@
+                                </div>
+                                </div>
+
+                                <div class="course__button button_php">
+                                <a href="Courses">
+                                Go to course
+                                </a>
+                                </div>
+                                </div>
+
+                                <div class="flip">
+                                <div class="flip__front course__image">
+                                <img src="~/images/phpCourse.jpg" />
+                                </div>
+
+                                <div class="flip__back">
+                                <p>Welcome to PHP Course</p>
+                                </div>
+                                </div>
+                                </div>
+                                </div>*@
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
                         </div>
@@ -332,16 +332,15 @@
                         </div>
                     </div>
                 </a>
-                <div class="challenges" data-aos="zoom-in" data-aos-duration="1000">
 
+                <div class="challenges" data-aos="zoom-in" data-aos-duration="1000">
                     <div class="winrate__info">
                         <h3>Games win:</h3>
                         <h3 id="gamesRate">7/10</h3>
                     </div>
+
                     <div class="swiper">
-                        <div id="challanges" class="challenges-swiper swiper-container">
-                            
-                        </div>
+                        <div id="challanges" class="challenges-swiper swiper-container"></div>
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
                     </div>
@@ -365,47 +364,46 @@
             </div>
         </main>
 
-       
+
     </div>
-     <footer class="footer">
-            <div class="footer-links" data-aos="zoom-in" data-aos-duration="700">
-                <a href="#" class="footer-links_first">
-                    <div class="footer-link__image">
-                        <img src="~/images/facebookLogo.png" />
-                    </div>
-                </a>
+    <footer class="footer">
+        <div class="footer-links" data-aos="zoom-in" data-aos-duration="700">
+            <a href="#" class="footer-links_first">
+                <div class="footer-link__image">
+                    <img src="~/images/facebookLogo.png" />
+                </div>
+            </a>
 
-                <a href="#">
-                    <div class="footer-link__image">
-                        <img src="~/images/twitterLogo.png" />
-                    </div>
-                </a>
+            <a href="#">
+                <div class="footer-link__image">
+                    <img src="~/images/twitterLogo.png" />
+                </div>
+            </a>
 
-                <a href="#">
-                    <div class="footer-link__image">
-                        <img src="~/images/linkedinLogo.png" />
-                    </div>
-                </a>
-            </div>
+            <a href="#">
+                <div class="footer-link__image">
+                    <img src="~/images/linkedinLogo.png" />
+                </div>
+            </a>
+        </div>
 
-            <div class="footer__text" data-aos="zoom-in" data-aos-duration="700">
-                <h5>&#x24B8; 2021 Programmania. All rights reserved.</h5>
-            </div>
-        </footer>
-
+        <div class="footer__text" data-aos="zoom-in" data-aos-duration="700">
+            <h5>&#x24B8; 2021 Programmania. All rights reserved.</h5>
+        </div>
+    </footer>
 
     <script type="text/javascript" src="~/js/elements/challangeItem.js"></script>
     <script type="text/javascript" src="~/js/elements/courseItemMain.js"></script>
     <script type="text/javascript" src="~/js/util/courses-slider.js"></script>
     <script type="text/javascript" src="~/js/util/news-slider.js"></script>
     <script type="text/javascript" src="~/js/util/challenges-slider.js"></script>
-    <script type="text/javascript" src="~/js/util/createChartInMain.js"></script>
     <script type="text/javascript" src="~/js/util/open-menu.js"></script>
-    <script type="text/javascript" src="~/js/main.js"></script>
     <script type="text/javascript" src="~/js/util/burger.js"></script>
-    <script type="text/javascript">
+
+    <script type="text/javascript" src="~/js/main.js"></script>
+    @*<script type="text/javascript">
         AOS.init();
-    </script>
+        </script>*@
 </body>
 
 
