--- a/Programmania/Views/Home/Main.cshtml
+++ b/Programmania/Views/Home/Main.cshtml
@@ -340,7 +340,9 @@
                     </div>
 
                     <div class="swiper">
-                        <div id="challanges" class="challenges-swiper swiper-container"></div>
+                        <div class="challenges-swiper swiper-container">
+                            <div id="challanges" class="swiper-wrapper"></div>
+                        </div>
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
                     </div>
