--- a/Programmania/Views/Home/Main.cshtml
+++ b/Programmania/Views/Home/Main.cshtml
@@ -318,8 +318,8 @@
 
 
 
-            <div class="challenges-container" id="challenges">
-                <a href="Challenges">
+            <div class="challenges-container">
+                <a href="#">
                     <div class="btn btn_link btn_link_red">
                         <div class="btn_link__front">
                             Challenges
@@ -403,9 +403,9 @@
     <script type="text/javascript" src="~/js/util/burger.js"></script>
 
     <script type="text/javascript" src="~/js/main.js"></script>
-    @*<script type="text/javascript">
+    <script type="text/javascript">
         AOS.init();
-        </script>*@
+    </script>
 </body>
 
 
