Fixed Index page

--- a/Programmania/Views/Home/Index.cshtml
+++ b/Programmania/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
             <div class="header-image">
                 <a name="main"></a>
                 <div class="header-image-text">
-                    <h3>Programmania:</h3>
+                    <h3>Programmania</h3>
                     <h5>We will be glad to see you</h5>
                 </div>
             </div>
@@ -115,6 +115,8 @@
                             </div>
                         </div>
                     </div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
             </div>
 
