--- a/Programmania/wwwroot/css/Index.css
+++ b/Programmania/wwwroot/css/Index.css
@@ -1,13 +1,3 @@
-.wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-}
-
-.main {
-    flex: 1 1 auto;
-}
-
 .header-text {
     height: 70px;
 }
@@ -58,7 +48,7 @@
     position: absolute;
     bottom: 0;
     height: 400px;
-    background-color: rgba(224,224,224, .3);
+    background-color: rgba(224,224,224, .6);
     width: 100%;
 }
 
@@ -95,7 +85,7 @@
 }
 
 .swiper {
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 
@@ -123,6 +113,72 @@
     .swiper-image__text h3 {
         font-family: monsterrat-bold;
         text-align: center;
+    }
+
+.swiper-button-prev {
+    width: 50px !important;
+    height: 50px !important;
+    background: #fff !important;
+    border: 2px solid #66a8ff !important;
+    border-radius: 50% !important;
+    color: #66a8ff !important;
+    cursor: pointer !important;
+    line-height: 100px !important;
+    transition: all 0.5s ease 0s !important;
+}
+
+    .swiper-button-prev:hover {
+        background: #66a8ff !important;
+        border-color: #66a8ff !important;
+        color: #fff !important;
+    }
+
+    .swiper-button-prev::after {
+        position: absolute !important;
+        display: inline-block !important;
+        content: "" !important;
+        width: 12.5px !important;
+        height: 12.5px !important;
+        top: 50% !important;
+        left: 50% !important;
+        margin-left: -6px !important;
+        margin-top: -6px !important;
+        border-bottom: 2px solid !important;
+        border-right: 2px solid !important;
+        transform: rotateZ(135deg) !important;
+    }
+
+.swiper-button-next {
+    width: 50px !important;
+    height: 50px !important;
+    background: #fff !important;
+    border: 2px solid #66a8ff !important;
+    border-radius: 50% !important;
+    color: #66a8ff !important;
+    cursor: pointer !important;
+    line-height: 100px !important;
+    transition: all 0.5s ease 0s !important;
+}
+
+    .swiper-button-next:hover {
+        background: #66a8ff !important;
+        border-color: #66a8ff !important;
+        color: #fff !important;
+    }
+
+    .swiper-button-next::after {
+        position: absolute !important;
+        display: inline-block !important;
+        content: "" !important;
+        width: 12.5px !important;
+        height: 12.5px !important;
+        top: 50% !important;
+        left: 50% !important;
+        margin-left: -10px !important;
+        margin-top: -6px !important;
+        border-bottom: 2px solid !important;
+        border-right: 2px solid !important;
+        transform: rotateZ(-45deg) !important;
     }
 
 .advantages {
@@ -158,13 +214,13 @@
 
     .advantages__text p {
         font-family: monsterrat-light;
-        margin-top: 50px;
+        margin-top: 30px;
         font-weight: 300;
         font-size: 1.5em;
     }
 
 .features {
-    padding: 50px;
+    padding: 30px;
     background-color: #f0fff0;
 }
 
@@ -194,84 +250,6 @@
         background: url("../images/successImage.png") left no-repeat;
         padding: 0 0 0 100px;
     }
-
-
-/*.modal {
-    padding: 10%;
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    overflow: auto;
-    background-color: rgba(0,0,0,.4);
-}
-
-.modal-content {
-    font-family: monsterrat-normal;
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    border: 1px solid #888;
-    width: 80%;
-    padding: 1% 2%;
-    font-size: 2em;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    animation-name: animatetop;
-    animation-duration: 0.4s;
-}
-
-.error {
-    font-size: 15px !important;
-    color: red;
-    margin-left: 10px;
-}
-
-@keyframes animatetop {
-    from {
-        top: -300px;
-        opacity: 0
-    }
-
-    to {
-        top: 0;
-        opacity: 1
-    }
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-    .close:hover,
-    .close:focus {
-        color: black;
-        text-decoration: none;
-        cursor: pointer;
-    }
-
-#registerForm label, #loginForm label {
-    font-family: monsterrat-normal;
-    margin-top: 20px;
-    font-size: 0.7em;
-}
-
-#registerForm input, #loginForm input {
-    font-family: monsterrat-light;
-    margin-top: 10px;
-    font-size: 0.6em;
-}
-
-#registerBtnOut, #loginBtnOut {
-    margin: 30px;
-    float: right;
-}*/
 
 @media(max-width: 1200px) {
     .header-image {
@@ -319,10 +297,12 @@
     }
 
         .header-image-text h3 {
+            margin-top: 40px;
             font-size: 1.8em !important;
         }
 
         .header-image-text h5 {
+            margin-top: 20px;
             font-size: 1.2em !important;
         }
 
