--- a/Programmania/wwwroot/css/Main.css
+++ b/Programmania/wwwroot/css/Main.css
@@ -1,5 +1,3 @@
-
-
 html, body {
     height: 100%;
     scroll-behavior: smooth;
@@ -98,7 +96,7 @@ html, body {
 .left-menu {
     position: fixed;
     height: 450px;
-    margin-top: 40vh;
+    margin-top: 25vh;
     width: auto;
     border-top-right-radius: 40px;
     border-bottom-right-radius: 40px;
@@ -188,7 +186,7 @@ html, body {
     font-size: 2.8em;
     font-weight: 700;
     font-family: "monsterrat-thin";
-    margin-bottom:20px;
+    margin-bottom: 50px;
 }
 
 .title_link {
@@ -291,10 +289,6 @@ html, body {
     height: auto !important;
 }
 
-body {
-    perspective: 800px;
-}
-
 .course {
     display: flex;
     flex-direction: row;
@@ -381,7 +375,7 @@ body {
     margin: 0 auto;
     width: 500px;
     height: auto;
-
+    cursor: pointer;
 
     padding: 10px;
     text-align: center;
